--- a/MyCalc/Base.lproj/Main.storyboard
+++ b/MyCalc/Base.lproj/Main.storyboard
@@ -43,21 +43,21 @@
                                 </constraints>
                                 <state key="normal" title="7"/>
                                 <connections>
-                                    <action selector="tap7Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ihP-c0-aOb"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pw4-mE-n8b"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ef-C3-Gs7">
                                 <rect key="frame" x="110" y="103" width="100" height="60"/>
                                 <state key="normal" title="8"/>
                                 <connections>
-                                    <action selector="tap8Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jy3-Hu-eNc"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uKT-pA-iqC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K01-jd-V1H">
                                 <rect key="frame" x="218" y="103" width="100" height="60"/>
                                 <state key="normal" title="9"/>
                                 <connections>
-                                    <action selector="tap9Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iFV-Jj-4z9"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IJG-kF-QDD"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0E-GL-OfN">
@@ -67,7 +67,7 @@
                                 </constraints>
                                 <state key="normal" title="4"/>
                                 <connections>
-                                    <action selector="tap4Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="puo-Bg-JVn"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPv-Uh-tsM"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S4D-wR-rA7">
@@ -77,35 +77,35 @@
                                 </constraints>
                                 <state key="normal" title="1"/>
                                 <connections>
-                                    <action selector="tap1Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pbu-Bw-LTd"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SZl-KS-Eh4"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAm-2P-T2i">
                                 <rect key="frame" x="110" y="239" width="100" height="60"/>
                                 <state key="normal" title="2"/>
                                 <connections>
-                                    <action selector="tap2Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nw3-hC-cPh"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xpb-Nz-gKr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMA-Uh-npv">
                                 <rect key="frame" x="218" y="239" width="100" height="60"/>
                                 <state key="normal" title="3"/>
                                 <connections>
-                                    <action selector="tap3Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7HC-OB-TyG"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="59M-Ix-ojd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="94W-Ew-csD">
                                 <rect key="frame" x="110" y="171" width="100" height="60"/>
                                 <state key="normal" title="5"/>
                                 <connections>
-                                    <action selector="tap5Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ej3-uk-sBW"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CYQ-2F-KED"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m8K-8a-DmW">
                                 <rect key="frame" x="218" y="171" width="100" height="60"/>
                                 <state key="normal" title="6"/>
                                 <connections>
-                                    <action selector="tap6Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pz0-05-YdH"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bcx-SK-ZhS"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uio-IG-Pvj">
@@ -122,7 +122,7 @@
                                 </constraints>
                                 <state key="normal" title="0"/>
                                 <connections>
-                                    <action selector="tap0Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9fu-3C-5V2"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bru-wn-1np"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="47W-fg-qzK">
@@ -136,7 +136,7 @@
                                 <rect key="frame" x="109" y="307" width="100" height="60"/>
                                 <state key="normal" title="00"/>
                                 <connections>
-                                    <action selector="tap00Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ECg-rT-10o"/>
+                                    <action selector="tapNumberButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IA1-TR-nb8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -229,7 +229,7 @@
                                 </constraints>
                                 <state key="normal" title="0"/>
                                 <connections>
-                                    <action selector="tap0Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="X5v-pc-7vF"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="vhC-57-mgf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNc-Dd-n7G">
@@ -246,21 +246,21 @@
                                 </constraints>
                                 <state key="normal" title="1"/>
                                 <connections>
-                                    <action selector="tap1Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="se6-5o-AQU"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="sHr-Wp-hOX"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHP-V9-yPN">
                                 <rect key="frame" x="110" y="239" width="100" height="60"/>
                                 <state key="normal" title="2"/>
                                 <connections>
-                                    <action selector="tap2Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="qTd-2z-g9F"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="IWu-h5-39K"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jj-Uy-DUH">
                                 <rect key="frame" x="218" y="239" width="100" height="60"/>
                                 <state key="normal" title="3"/>
                                 <connections>
-                                    <action selector="tap3Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="APm-GY-BIJ"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="5LR-14-tBf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l16-j5-29a">
@@ -270,21 +270,21 @@
                                 </constraints>
                                 <state key="normal" title="4"/>
                                 <connections>
-                                    <action selector="tap4Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="odm-5o-fcR"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="7EI-Cy-Nev"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csz-IU-4cC">
                                 <rect key="frame" x="110" y="171" width="100" height="60"/>
                                 <state key="normal" title="5"/>
                                 <connections>
-                                    <action selector="tap5Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="EBY-c6-qMN"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="RF9-Wy-Glb"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AM1-d3-8uw">
                                 <rect key="frame" x="218" y="171" width="100" height="60"/>
                                 <state key="normal" title="6"/>
                                 <connections>
-                                    <action selector="tap6Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="rKf-RV-wc0"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="PeL-3S-RW9"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W57-Uj-hHq">
@@ -295,21 +295,21 @@
                                 </constraints>
                                 <state key="normal" title="7"/>
                                 <connections>
-                                    <action selector="tap7Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="2m6-nD-0KD"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="NcT-cL-HyM"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ts-NE-5zP">
                                 <rect key="frame" x="110" y="103" width="100" height="60"/>
                                 <state key="normal" title="8"/>
                                 <connections>
-                                    <action selector="tap8Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="ZtX-BY-t4q"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="UNj-qh-WeE"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uBV-SN-yzW">
                                 <rect key="frame" x="218" y="103" width="100" height="60"/>
                                 <state key="normal" title="9"/>
                                 <connections>
-                                    <action selector="tap9Button:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="8WH-Lm-V7b"/>
+                                    <action selector="tapNumberButton:" destination="Lg9-L8-bzw" eventType="touchUpInside" id="ZK9-MP-i6a"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pfl-tY-99q">
